# APE-Anantham-Physics-Engine

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  README.md  toolchain-mingw.cmake  vcpkg.json
include/: ape_buffer.hpp  ape_camera.hpp  ape_device.hpp  ape_frame_info.hpp  ape_game_object.hpp  ape_model.hpp  ape_pipeline.hpp  ape_renderer.hpp  ape_swap_chain.hpp  ape_utils.hpp  ape_window.hpp  first_app.hpp  keyboard_movement_controller.hpp  simple_render_system.hpp
include/App/: App.hpp
include/Core/: Engine.hpp  Logger.hpp  Window.hpp  first_app.hpp  keyboard_movement_controller.hpp
include/Core/Graphics/: Renderer.hpp
include/Core/Rendering/: Buffer.hpp  Camera.hpp  Descriptors.hpp  Device.hpp  FrameInfo.hpp  GameObject.hpp  Model.hpp  Pipeline.hpp  Renderer.hpp  SwapChain.hpp
include/Core/Scene/: Scene.hpp  SceneManager.hpp
include/Core/Systems/: point_light_system.hpp  simple_render_system.hpp
include/Core/Utils/: Logger.hpp  Utils.hpp
include/engine/: Core.hpp  Logger.hpp
scripts/: compile_shaders.sh
shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/: ape_buffer.cpp  ape_camera.cpp  ape_device.cpp  ape_game_object.cpp  ape_model.cpp  ape_pipeline.cpp  ape_renderer.cpp  ape_swap_chain.cpp  ape_window.cpp  first_app.cpp  keyboard_movement_controller.cpp  main.cpp  simple_render_system.cpp
src/App/: App.cpp
src/Core/: Engine.cpp  Logger.cpp  Window.cpp  first_app.cpp  keyboard_movement_controller.cpp
src/Core/Rendering/: Buffer.cpp  Camera.cpp  Descriptors.cpp  Device.cpp  GameObject.cpp  Model.cpp  Pipeline.cpp  Renderer.cpp  SwapChain.cpp
src/Core/Systems/: point_light_system.cpp  simple_render_system.cpp
src/Core/Utils/: Logger.cpp
src/Scene/: Scene.cpp
src/engine/: Logger.cpp
